nav scrolls, main fonts corrected and text aligned

--- a/src/App.css
+++ b/src/App.css
@@ -149,14 +149,15 @@
   margin-right: 3rem;
   list-style-type: none;
 }
-.button{
+.nav-button{
   background: none;
   border: none;
   font-size: 1em;
   transition-duration: 0.4s;
   color: white;
+  text-decoration: none;
 }
-.registerButton{
+.nav-registerButton{
   background-color: #FF7676;
   border: 0.12rem solid #FF7676;
   border-radius: 3rem;
@@ -168,11 +169,12 @@
   transition-duration: 0.4s;
   color: white;
 }
-.button:hover{
+.nav-button:hover{
   color:#AD0624;
   cursor: pointer;
 }
-.registerButton:hover{
+
+.nav-registerButton:hover{
   background-color: #FFFFFF;
   color:#AD0624;
   border: 0.18rem solid #AD0624;
@@ -184,12 +186,15 @@
   background-color: #B61255;
   position:relative;
   display: flex;
+
   width: 100%;
-  height: 60vh;
+  height: 80vh;
   font-size: calc(1em + 2vmin);
+  font-family: 'unbounded';
 }
 .Main-text{
   position: absolute;
+  text-align: left;
   left:10rem;
   top:10rem;
 }
@@ -199,16 +204,21 @@
 .Main-subtitle{
   color:#FFFFFF;
 }
-.registerButton2{
+.Main-subtitle2{
+  color:#FFFFFF;
+  font-size: .5em;
+}
+.Main-registerButton2{
   background-color: #FFFFFF;
-  border: 0.18rem solid black;
+  border:none;
   border-radius: 100px;
+  font-family: 'unbounded';
 
   width: 15rem;
   height:2rem;
   transition-duration: .4s;
 }
-.registerButton2:hover{
+.Main-registerButton2:hover{
   background-color: #AD0624;
   border: 0.18rem solid white;
   color: #FFFFFF;
